# agent_smith

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  search.py  setup.sh
bot_agent_smith/: Dockerfile  README.md  exemple_env  main.py  pyproject.toml  requirements.txt
bot_agent_smith/docker_chroma/: docker-compose.yml
bot_agent_smith/src/core/: agent.py  logger.py  types.py
bot_agent_smith/src/interfaces/: types.py
bot_agent_smith/src/interfaces/discord/: adapter.py  bot.py
bot_agent_smith/src/llm/: __init__.py  service.py
bot_agent_smith/src/llm/gcp_models/: __init__.py  client.py  models.py
bot_agent_smith/src/llm/ollama/: __init__.py  client.py  models.py
bot_agent_smith/src/memory/: __init__.py  chroma.py  interfaces.py
bot_agent_smith/src/memory/chroma_db/: __init__.py
bot_agent_smith/src/memory/gcp_vector_search/: __init__.py  gcp_vector_search.py
bot_agent_smith/src/memory/qdrant/: __init__.py  qdrant.py
bot_agent_smith/src/orchestration/context/: builder.py
bot_agent_smith/src/orchestration/conversation/: manager.py  types.py  window.py
bot_agent_smith/src/orchestration/services/: registry.py
bot_agent_smith/src/orchestration/workflows/: qualified_workflow.py  simple_workflow.py  state.py  workflow.py
bot_agent_smith/src/skills/context/: service.py
bot_agent_smith/src/skills/dummy/: dummy.py
bot_agent_smith/src/skills/embedding/: __init__.py  service.py
bot_agent_smith/tests/test_llm/: test_gcp_model.py  test_ollama.py
bot_agent_smith/tests/test_memory/: test_chromadb.py
bot_agent_smith/tests/test_orchestration/: test_conversation.py
bot_agent_smith/tests/test_skills/: test_keyword_extraction.py
bot_agent_smith/tests/test_workflows/: test_basic.py  test_intermediate_message.py  test_qualified_workflow.py
(+43 files in other folders)
